v0.812 minor spacing fixes

--- a/css/bodystyle.css
+++ b/css/bodystyle.css
@@ -453,6 +453,10 @@ strong {
 
 }
 
+.a-instagram {
+  margin-bottom: 50px;
+}
+
 
 
 
